# svelte-xp

./: .gitignore  README.md  docker-compose.yml  nginx-dev-sites.conf
django/: Dockerfile  db.sqlite3  pyproject.toml  run-server.sh
django/mydjango/: settings.py  urls.py
django/mydjango/auth/: apps.py  urls.py  views.py
my-app/: Dockerfile  MYREADME.md  package-lock.json  package.json  svelte.config.js
my-app/src/: config.ts  hooks.ts
my-app/src/lib/: auth.ts  form.ts
my-app/src/lib/header/: Header.svelte
my-app/src/routes/auth/: index.svelte
my-app/src/routes/render/: index.json.ts
my-app/src/routes/todos/: index.json.ts  index.svelte
